<resources>
    <string name="app_name">Dragon Mandarin - Learn Chinese</string>
    <string name="flip">Flip</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="search">Search</string>
    <string name="show">Show</string>
    <string name="hint">Hint</string>
    <string name="quiz">Quiz</string>
    <string name="animate">Animate</string>
    <string name="next">Ok!</string>
    <string name="write">Write</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="ocrGallery">OCR from Gallery</string>
    <string name="ocrCamera">OCR from camera</string>
</resources>